--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-body {
+html body {
   margin: auto;
-  
   font-family: sans-serif;
-  height: auto;
+  height: 100%;
   width:auto;
   margin:0;
-  background: blue;
+  background: #e9f7ef  ;
 }
 .alert{
   width: auto;
@@ -18,6 +17,8 @@ body {
   margin:0px auto;
   padding:30px;
   box-shadow: 0px 0px 40px #888888;
+  background:linear-gradient( #fad7a0 ,#76d7c4, #d1f2eb)
+  
 }
 .titles h1{
   text-align:center;
@@ -33,6 +34,9 @@ body {
 
 .weather__val{
   font-weight: bold;
+}
+.btn{
+  margin-left:3px;
 }
 
 
@@ -66,4 +70,6 @@ body {
     height:auto;
     margin:auto;
   }
+  
+
 }
